# TunaCAST

./: CMakeLists.txt  README.md
src/cpp/: qmlinterface.cpp  qmlinterface.h  serverinterface.cpp  serverinterface.h  videocaptureprovider.cpp  videocaptureprovider.h  windowlistmodel.cpp  windowlistmodel.h
src/qml/controls/: AvailableScreensDelegate.qml  AvailableWindowsDelegate.qml  BusyWidget.qml  CastButton.qml  Icon.qml  IconLabel.qml  ImageIcon.qml  LoadingWidget.qml  SideBar.qml
src/qml/views/: AvailableDevices.qml  CastWindow.qml  Splash.qml
